--- a/app/src/main/res/layout/activity_modelo.xml
+++ b/app/src/main/res/layout/activity_modelo.xml
@@ -8,10 +8,9 @@
     tools:context=".Modelo">
 
     <androidx.cardview.widget.CardView
+        android:layout_gravity="center"
         android:layout_width="350dp"
         android:layout_height="550dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="20dp">
 
