--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/MyThemeOverlay_Toolbar"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -12,11 +13,9 @@
             app:title="Hello World"
             app:menu="@menu/toolbar"
             app:navigationIcon="@drawable/ic_baseline_menu"
-            app:navigationIconTint="@color/white"
             app:titleTextColor="#fff"
             android:background="#010622"
             android:id="@+id/toolBar"
-            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             />
