--- a/app/src/main/res/layout/activity_recycler_horizontal.xml
+++ b/app/src/main/res/layout/activity_recycler_horizontal.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<FrameLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/flCoffe"
-    android:layout_height="match_parent"
     tools:context=".ProdutoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,5 +17,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/activity_modelo"/>
-
 </FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:src="@drawable/ic_baseline_add"
+        android:textAlignment="center"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
