--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:id="@+id/drawerLayout"
     tools:openDrawer="start">
@@ -10,7 +11,9 @@
     <include layout="@layout/activity_main"/>
     
     <com.google.android.material.navigation.NavigationView
+        app:headerLayout="@layout/drawer_header_layout"
         android:id="@+id/navDrawer"
+        app:menu="@menu/drawer_menu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
