--- a/app/src/main/res/layout/activity_modelo.xml
+++ b/app/src/main/res/layout/activity_modelo.xml
@@ -46,13 +46,25 @@
             android:textStyle="normal" />
 
         <TextView
-            android:id="@+id/precoCafe"
+            android:id="@+id/tvRS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="90dp"
-            android:text="R$10,00"
+            android:text="R$"
+            android:textColor="@color/black"
+            android:textSize="23sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/precoCafe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="70dp"
+            android:layout_marginBottom="90dp"
+            android:text="10,00"
             android:textColor="@color/black"
             android:textSize="23sp"
             android:textStyle="bold" />
