--- a/app/src/main/res/layout/activity_recycler_horizontal.xml
+++ b/app/src/main/res/layout/activity_recycler_horizontal.xml
@@ -19,9 +19,38 @@
         tools:listitem="@layout/activity_modelo"/>
 </FrameLayout>
 
+    <Button
+        android:id="@+id/btMenos"
+        android:layout_marginRight="60dp"
+        android:drawableBottom="@drawable/ic_baseline_remove"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="16dp"
+        android:layout_width="35dp"
+        android:layout_height="40dp"/>
+
+    <TextView
+        android:text="0"
+        android:textSize="24sp"
+        android:id="@+id/tvQtde"
+        android:layout_gravity="bottom|center"
+        android:layout_width="20dp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:layout_height="40dp" />
+
+    <Button
+        android:id="@+id/btMais"
+        android:layout_marginLeft="60dp"
+        android:drawableBottom="@drawable/ic_baseline_add"
+        android:textColor="@color/white"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="16dp"
+        android:layout_width="35dp"
+        android:layout_height="40dp"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
-        android:src="@drawable/ic_baseline_add"
+        android:src="@drawable/ic_baseline_add_cart"
         android:textAlignment="center"
         android:layout_width="50dp"
         android:layout_height="50dp"
